[package]
name = "cargo-node"
version = "0.1.0"
authors = ["Florian Blasius <flovanpt@posteo.de>"]
description = "A cargo sub command to build, run and deploy rust wasm applications as browser, electron or cordova app."
repository = "https://github.com/FloVanGH/cargo-node"
readme = "README.md"
license = "MIT"
edition = "2018"

[dependencies]
sigma = "0.1.1"
toml = "0.5.3"
serde = "1.0.101"
serde_derive = "1.0.101"